Fix course menu cutoff

--- a/src/styles/ta/TAView.scss
+++ b/src/styles/ta/TAView.scss
@@ -5,7 +5,6 @@
 }
 
 .TAView {
-    overflow: auto;
     padding-bottom: 50px;
 
     .UploadPopUpMessageWrap {
